mythtv (0.21.0~fixes16259-0ubuntu2) UNRELEASED; urgency=low

  * debian/mythtv-frontend.dirs:
    - Add var/log/mythtv (LP: #185646)
  * debian/patches/10_mythfilldatabase_log:
    - Should allow mythfilldatabase to really log (LP: #196553)

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 01 Mar 2008 01:54:49 -0600

mythtv (0.21.0~fixes16259-0ubuntu1) hardy; urgency=low

  * New upstream checkout.
  * debian/control:
    - Add libfftw3-dev to build depends for FFT support.
    - Add conflicts/replaces for mythappearance. (LP: #195421)
  * debian/rules:
    - Replace with pentium3 tuning to attempt to get more MMX
      optimizations.
      Should (hopefully) fix (LP: #195306).
    - Add libfftw3 support (undocumented in configure)

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 20 Feb 2008 02:16:46 -0600

mythtv (0.21.0~fixes16174-0ubuntu1) hardy; urgency=low

  * New upstream checkout.
    - Drop 07_alsa_default as it has been absorbed upstream (rev 15995)
  * Depend on libfaad2-dev | libfaad-dev so as to make building
    on gutsy still possible
  * Clean up 09_perl_bindings for changes upstream.

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 16 Feb 2008 17:14:23 -0600

mythtv (0.21.0~fixes15967-0ubuntu2) hardy; urgency=low

  * Replace --tune=i686 and --cpu=i686 as it was a performance loss
    to tune to generic. (LP: #191165)
  * Build with unadvertised faad support.
  * Build with unadvertised faac support.
  * Build with unadvertised libmp3lame support.
  * Build with unadvertised liba52 support.
  * Build with unadvertised libx264 support.
  * Build with unadvertised libxvid support.

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 16 Feb 2008 02:07:39 -0600

mythtv (0.21.0~fixes15967-0ubuntu1) hardy; urgency=low

  * New upstream checkout.
    - Upstream has entered feature freeze and this is built
      against the 0.21-fixes branch now.
  * Update 07_alsa_default due to upstream changes again.
  * debian/control: